ui_tests/infer_vars_2.stderr
error: mismatched types: a:Other[] b:Awk[]
   ┌─ main.box:8:17
   │  
 8 │   fn bar() -> Awk {
   │ ╭─────────────────^
 9 │ │     foo[?](new Other {})
10 │ │ }
   │ ╰─^

