ui_tests/infer_vars_2.box
fn foo[T](a: T) -> T {
    a
}

type Other {}
type Awk {}

fn bar() -> Awk {
    foo[?](new Other {})
}